# horkos

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  rust-toolchain.toml
ac/: CMakeLists.txt
ac/include/horkos/: ac.h  hv_logic.h  hv_signals.h  selfcheck.h
ac/src/: ac.cpp
ac/src/anti_analysis/: HostToolFingerprint.cpp  InstrumentationResidency.cpp  anti_analysis_collect.cpp  anti_analysis_logic.cpp
ac/src/hv/: hv_kernel_correlate.cpp  hv_tlfs_leaves.cpp  hv_tsc_coherence.cpp  hv_vbs_attest.cpp  hv_vm_identity.cpp  hv_vmexit_latency.cpp
ac/src/selfcheck/: dr_audit.cpp  got_target_audit.cpp  iat_target_audit.cpp  image_baseline.cpp  loader_consistency.cpp  page_cow_audit.cpp  pe_parse.cpp  pe_parse.h  retaddr_provenance.cpp  self_logic.cpp  self_wire.h  selfcheck.cpp  sig_handler_audit.cpp  text_crossview.cpp  tls_init_audit.cpp  veh_unwind_audit.cpp  wx_pte_audit.cpp
ac/src/timing/: cpuid_leaf_fan_win.cpp  decoy_shared.h  exception_latency_win.cpp  guard_fault_cadence_win.cpp  shared_data_clock_win.cpp  sibling_watchdog.cpp  timing_collect.cpp  timing_kernel_correlate.cpp  timing_logic.cpp  veh_fault_attribution_win.cpp
attestation/: Attestation.h  CMakeLists.txt
attestation/backends/common/: Tpm2EsapiQuote.cpp  Tpm2EsapiQuote.h
attestation/backends/linux/: AttestationTpm2Linux.cpp
attestation/backends/macos/: AttestationSecureEnclave.cpp
attestation/backends/win/: AttestationTpm2Win.cpp
bypass-tests/cross/: CMakeLists.txt  frida_gadget_residency.cpp  pointer_lattice_synthetic.cpp
bypass-tests/dma_hardware/: CMakeLists.txt  bypass_acs_p2p.cpp  bypass_bar_geometry.cpp  bypass_dsn_clone.cpp  bypass_extcfg_alias.cpp  bypass_hotplug_after_start.cpp  bypass_iommu_fault_storm.cpp  bypass_latency_only.cpp  bypass_msix_overflow.cpp  bypass_rom_identity.cpp  forensics_helpers.h
bypass-tests/linux/: CMakeLists.txt  devmem_open.cpp  devmem_write_open.cpp  ftrace_hook_commit_creds.cpp  got_hook.cpp  interp_shim.cpp  ld_audit_inject.cpp  ld_preload_launch.cpp  ldpreload_inject.cpp  loadorder_interpose.cpp  memfd_dlopen.cpp  memfd_exec.cpp  module_unlink_hidden.cpp  msr_lstar_write.cpp  proc_mem_open.cpp  ptrace_attach.cpp  rdebug_hook.cpp  self_text_patch.cpp  sensor_unavailable.cpp  text_inline_hook.cpp  uinput_virtual_provenance.cpp  vm_write_attach.cpp  wx_flip.cpp
bypass-tests/linux/network/: CMakeLists.txt  hk_bypass_net_backlog.cpp  (+5 more)
bypass-tests/macos/: CMakeLists.txt  amfi_posture_bootarg.cpp  amfid_taskport.cpp  cdhash_swap.cpp  cs_invalidate_mmap.cpp  csflags_strip.cpp  dylib_inject.cpp  dylib_teamid_inject.cpp  dynamic_validity_patch.cpp  entitlement_inject.cpp  exc_port_hijack.cpp  gatekeeper_xattr_strip.cpp  mmap_exec_foreign.cpp  proc_info_recon.cpp  ptrace_attach.cpp  remote_thread.cpp  responsible_launder.cpp  self_text_patch.cpp  task_for_pid_control.cpp  text_patch.cpp
bypass-tests/win/: CMakeLists.txt  aim_framelock_cadence.cpp  aim_injection_provenance.cpp  byovd_load.cpp  callback_strip_sentinel.cpp  callback_unhook.cpp  ci_state_flip.cpp  drvobj_fastio_detour.cpp  etw_session_disable.cpp  etwti_teardown.cpp  external_overlay_window.cpp  handle_dup_launder.cpp  hid_descriptor_template_clone.cpp  host_memory_editor.cpp  hv_detection_bypass.cpp  idt_pf_hook.cpp  infinity_hook_probe.cpp  input_filter_interloper.cpp  kdbg_attach.cpp  lstar_repoint.cpp  manual_map_scan.cpp  module_stomp_scan.cpp  nonimage_exec_map.cpp  overlay_vtable_swap.cpp  protect_flip.cpp  reparent_spoof.cpp  self_hwbp.cpp  self_iat_veh_hook.cpp  self_text_patch.cpp  shadow_ssdt_hook.cpp  ssdt_base_swap.cpp  ssdt_entry_hook.cpp  ssdt_hook_detect.cpp  staging_sequence.cpp  synthetic_input_provenance.cpp  syscall_prologue_patch.cpp  usb_bridge_descriptor_spoof.cpp  vm_read_external.cpp  vm_write_codecave.cpp  vmwatch_whitelist_fp.cpp
daemon/macos/: CMakeLists.txt  HKExceptionPortBaseline.cpp  HKExceptionPortBaseline.h  HKGameTaskHandle.cpp  HKGameTaskHandle.h  HKMmapBaseline.cpp  HKMmapBaseline.h  HKPtraceWatch.cpp  HKPtraceWatch.h  HKTextIntegrity.cpp  HKTextIntegrity.h  HKThreadIntegrity.cpp  HKThreadIntegrity.h  SelfCheckRead.mm  com.horkos.daemon.plist  horkosd.cpp
dma_detect/: CMakeLists.txt
dma_detect/src/: forensics_report.cpp  page_hash.c
drm/: CMakeLists.txt
drm/src/: drm.cpp
kernel/linux/: CMakeLists.txt
kernel/win/: CMakeLists.txt  horkos.inf  horkos.vcxproj
obfuscator/: CMakeLists.txt  README.md
obfuscator/src/: Annotations.h  Passes.h  Plugin.cpp
obfuscator/test/: .lit_test_times.txt  README.md  cff.test  lit.cfg.py  opaque.test  strenc.test  strenc_ctor_guard.test
sdk/: CMakeLists.txt
sdk/src/: ClockDomainProbe.cpp  NetCollect.cpp  ProbeChannel.cpp  SendBacklogProbe.cpp  TelemetrySerialize.cpp  TelemetrySerialize.h  net_backend.h  net_probes.h  sdk.cpp  sdk_backend.h
server/: Cargo.toml
server/.cargo/: config.toml
server/api/: Cargo.toml  data-categories.md
server/attestation-verify/: Cargo.toml
server/ban-engine/: Cargo.toml
server/license-server/: Cargo.toml
server/ml/: README.md  behavior_features.json  eval_anomaly_model.py  synth_behavior.py  train_aim_model.py  train_anomaly_model.py
server/telemetry/: Cargo.toml
tests/: CMakeLists.txt
tests/unit/: CMakeLists.txt  test_ac_lifecycle.cpp  test_aim_accumulator.cpp  test_anti_analysis_logic.cpp  test_attestation_create.cpp  test_cs_finding_size.cpp  test_drm.cpp  test_event_schema_sizes.cpp  test_genealogy_logic.cpp  test_hv_logic.cpp  test_input_prov_logic.cpp  test_integrity_finding_size.cpp  test_ioctl_sizes.cpp  test_linux_injection_logic.cpp  test_linux_module_integrity_logic.cpp  test_macos_codesign_logic.cpp  test_mem_image_logic.cpp  test_mem_stomp_logic.cpp  test_mem_vad_logic.cpp  test_minifilter_altitude.cpp  test_module_map_resolve.cpp  test_net_collect.cpp  test_render_hook_logic.cpp  test_selfcheck_fpgate.cpp  test_selfcheck_logic.cpp  test_sentinel.cpp  test_ssdt_decode.cpp  test_syscall_etw_logic.cpp  test_telemetry_serialize.cpp  test_thread_start_mismatch.cpp  test_timing_logic.cpp  test_vm_access_logic.cpp  test_vm_access_sizes.cpp
(+494 files in other folders)
